--- a/website.css
+++ b/website.css
@@ -1,17 +1,18 @@
 nav {
     font-size: 48px;
-    width: 95%;
+    width: 90%;
     text-align: center;
     margin: auto;
-    background-color: #b5b5b5;
+    background-color: #221A18;
     box-shadow: 1px 2px 10px rgb(97, 97, 97);
     font-family: "Cal Sans", sans-serif;
+
 }
 
 nav a:link {
     text-decoration: none;
-    padding: 15px;
-    color:#100004;
+    padding: 20px;
+    color:#EEE0CB;
 }
 
 form {
@@ -37,12 +38,22 @@ td img {
 
 footer {
     text-align: center;
-    background-color: #a8a8a8;
+    background-color: #374732;
     position: fixed;
     bottom: 2px;
     width: 100%;
 }
 
-.greenie {
+.greenie img {
     width: 100px;
+    padding-left: 45%;
+    padding-right: 45%;
+}
+
+body {
+    background-color: #EEE0CB;
+}
+
+footer p {
+    color:#EEE0CB;
 }
